@@ -38,6 +38,8 @@ Revision 4.2.5rc2
 - SNMP credentials management reworked to allow multiple securityNames's in
   snmpCommunityEntry and usmUserEntry tables. Changes made to addV1System(),
   addV3User() functions as well as to their oneliner's wrappers.
+- The contextEngineId parameter of config.addV3User() renamed into
+  securityEngineId as it's semantically correct.
 - AsynNotificationOriginator.cfgCmdGen() does not take into account
   securityModel & securityLevel when reducing LCD access via addTrapUser().
   This improves LCD consistency on sparse add/del operatons but also
